tests/baselines/reference/accessorWithInitializer.errors.txt
==== tests/cases/compiler/accessorWithInitializer.ts (2 errors) ====
    // target: es5
    
    class C {
        set X(v = 0) { }
              ~~~~~
!!! error TS1052: 'set' accessor parameter cannot have an initializer.
        static set X(v2 = 0) { }
                     ~~~~~~
!!! error TS1052: 'set' accessor parameter cannot have an initializer.
    }